# AVR16

./: .gitignore  CMakeLists.txt  CMakeLists_usingORBSLAM.txt  CamCalib.yaml  README.md  config.txt  prerequisite.sh  prerequiste.sh
DeepCam/: main.cpp  obj_record.proto
DeepCam/CMT/: CMT.cpp  CMT.h  Consensus.cpp  common.h
DeepCam/CMT/fastcluster/: fastcluster.h
DeepCam/MPEG7_Lib/: Convert.h  Descriptors.h  Feature.cpp  Feature.h  FexWrite.cpp  FexWrite.h  Frame.h
DeepCam/MPEG7_Lib/Extraction/: ColorLayoutExtraction.cpp  ColorLayoutExtraction.h  ColorSpaceExtraction.cpp  ColorSpaceExtraction.h  ColorStructureExtraction.cpp  ColorStructureExtraction.h  ContourShapeExtraction.cpp  ContourShapeExtraction.h  DominantColorExtraction.h  EdgeHistExtraction.cpp  EdgeHistExtraction.h  FaceRecognitionExtraction.h  GoFGoPColorExtraction.h  HomoTextureExtraction.cpp  HomoTextureExtraction.h  RegionShapeExtraction.cpp  RegionShapeExtraction.h  ScalableColorExtraction.cpp  ScalableColorExtraction.h
DeepCam/YOLO/: blas_kernels.cu  convolutional_kernels.cu  detection.c  detection.h  image.c  image.h
DeepCam/YOLO/yolo_cfg/: yolo-small.cfg
DeepCam/data/VPC/: 18.txt~  20.txt~  22.txt~  69.txt~  71.txt~
DeepCam/data/VPC2/: 18.txt~  19.txt~  20.txt~  22.txt~  23.txt~  69.txt~  71.txt~  M101.txt~  M102.txt~  M106.txt~
DeepCam/include/: CMT_vec.h  DeepCam.h  Displayer.h  IO.h  MultiObjMatcher.h  MultiObjTracker.h  Object.h  YOLO.h  globals.h  medusa.h
DeepCam/src/: CMT_vec.cpp  DeepCam.cpp  Displayer.cpp  IO.cpp  MultiObjMatcher.cpp  MultiObjTracker.cpp  Object.cpp  YOLO.cpp  globals.cpp  medusa.cpp
app/: DualCam.cpp  ZEDInitialization.cpp  main.cpp  mainScript.cpp
include/: AVRFrame.hpp  AugmentedVR.hpp  CVUtils.hpp  Displayer.hpp  FrameCache.hpp  GLViewer.hpp  Global.hpp  IO.hpp  ObjReceiver.hpp  ObjSender.hpp  ObjSenderHandler.hpp  OccupancyGrid.hpp  PCUtils.hpp  PathPlanner.hpp  PingpongRxBuffer.hpp  PointCloud.hpp  RxFrame.hpp  UtilsCV.hpp  UtilsPC.hpp  VCluster.hpp  Viewer.hpp  ZEDInitialization.h  globals.hpp  landmark.hpp  landmark_matchinfo.hpp  mySocket.hpp  pcCodec.hpp  serverHandler.hpp
src/: VCluster.cpp
src/AugmentedVR/: AVRFrame.cpp  AugmentedVR.cpp  CVUtils.cpp  Displayer.cpp  FrameCache.cpp  GLViewer.cpp  Global.cpp  IO.cpp  ObjReceiver.cpp  ObjSender.cpp  ObjSenderHandler.cpp  OccupancyGrid.cpp  PCUtils.cpp  PathPlanner.cpp  PingpongRxBuffer.cpp  PointCloud.cpp  RxFrame.cpp  Simple3DObject.cpp  UtilsCV.cpp  UtilsPC.cpp  VCluster.cpp  Viewer.cpp  globals.cpp  landmark.cpp  landmark_matchinfo.cpp  mySocket.cpp  pcCodec.cpp  serverHandler.cpp
src/ORB_SLAM2/include/: LoopClosing.h  MapDrawer.h  System.h  Tracking.h  Viewer.h
src/ORB_SLAM2/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
